# uukit

./: app_init.sh
AndroidSdkBuild/sdk/: reame.txt
CMakeFileTest/: CMakeLists.txt  readme.txt  test1.cpp
CMakeFileTest/Add/: CMakeLists.txt  readme.txt
CMakeFileTest/Add/Add/: CMakeLists.txt  add.h
CMakeFileTest/IosDevelopeByCmake/lib/: CMakeLists.txt  add.cpp
CMakeFileTest/IosDevelopeByCmake/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  out
CommonLibTest/NewAndDeleteUse/: CMakeLists.txt  common.h  main.cpp
CommonLibTest/StaticCast/: CMakeLists.txt  static_cast.cpp
DoorBell/: CMakeLists.txt  makefile  test_hwsdk.cpp  测试指令.txt
DoorBell/inc/: const.h  hwsdk.h  hwsdkType.h  test.h
LibuvTcp/: CMakeLists.txt  client.cpp  server.cpp
TestC++Perform/NewUse/: CMakeLists.txt  main.cpp  readme.txt  test.cpp  test.h
UseValgrind/: test  test.cpp
addHead/: demo1  demo1.cpp  if  it
boadCast/cliboard/: cli.cpp  makefile
boadCast/serboard/: makefile  serBoast  server.cpp
cPluseLibTest/StrsepTest/: CMakeLists.txt  main.cpp  readme.txt  test.cpp  (+1 more)
cUrl/: makefile  out  testCurl.cpp
common/: CMakeLists.txt  makefile  out  test.cpp
condTest/: makefile  readme.txt
cppMysql/: data.txt  makefile  out  readme  test1.cpp
demoRedis/: demo.cpp
demoUdpServer/: test  test.cpp
dormant/: readme
gdb_segmentdefault_test/: core.10165  core.10477  test  test.cpp
installSSR/: readme.txt
learnLibev/: test  test.cpp  test1  test1.cpp  test2  test2.cpp  test3  test3.cpp
learnLibuv/: hellow  hellow.cpp  readme
makefileMoudel/: fileStructForMakefile  makefile
simple_log/: readme  test  test.cpp
testFileSize/: test  test.cpp
testIncludeConfig/: main.cpp  makefile  out
zlog/: main.cpp  makefile  out  readme  test_hello.conf
(+274 files in other folders)
