PROJECT(out)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
INCLUDE_DIRECTORIES(/usr/include)
LINK_DIRECTORIES(/usr/lib/ /root/uukit/CMakeFileTest/Add/Add)
LINK_LIBRARIES(mysqlcppconn add)
#ADD_SUBDIRECTORY(src)
#list (REMOVE_ITEM DIR_SRCS main.cpp CMakeLists.txt)
# SET( ALL_SOURCES ${SRC_LIDAR_FORMAT} )
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(out ${DIR_SRCS})

